<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_template"
        android:textSize="30sp" />
    <LinearLayout
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_margin="30dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/template1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/template_1"
                android:background="@drawable/template1"
                tools:srcCompat="@drawable/template1"/>
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/template_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_margin="30dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/template2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/template_2"
                android:background="@drawable/template2"
                tools:srcCompat="@drawable/template2"/>
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/template_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>